# CUDA_Dev

./: Build_Protocol.md  CMakeLists.txt  CMakeLists_Cuda2.txt  CMakePresets.json  CMakeSettings.json  README.md  main.cpp  setup_cuda.bat  vector_add.cu
Cuda_building_with_ninja_Degug/: CMakeLists.txt
Cuda_building_with_ninja_Degug/build - ninja_DebugMode/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cuda_kernels.lib  vector_add.exp  vector_add.ilk
build - with fixed path cuda in ENV - Kopie/: CMakeLists_Fest_cuda_path.txt
build - with fixed path cuda in ENV - Kopie/build - with fixed path cuda in ENV/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cuda_kernels.lib  vector_add.lib
